# tales-bot

./: README.md  pyproject.toml
src/scripts/: import_csv.py  transfer.py
src/talesbot/: custom_types.py  known_handles.py  player_setup.py  posting.py
src/talesbot/ext/: gm.py
src/talesbot/ui/: register.py
